<resources>
    <string name="google_app_id">orbital-kit-122701</string>
    <string name="app_name">LingoBarterClient</string>
    <string name="hx_search">"Search"</string>
    <string name="hx_return">"Return"</string>
    <string name="hx_male">"Male"</string>
    <string name="hx_female">"Female"</string>
    <string name="hx_all">"All"</string>
    <string name="hx_yes">"YES"</string>
    <string name="hx_no">"NO"</string>
    <string name="hx_zero">"0"</string>
    <string name="hx_one_hundred">"100"</string>
    <string name="hx_from">"From"</string>
    <string name="hx_to">"To"</string>
    <string name="hx_god_button">"God Button"</string>
    <string name="hx_email">"Email"</string>
    <string name="hx_password">"Password"</string>
    <string name="hx_login">"LOGIN"</string>
    <string name="hx_register_hint">"I don't have an account."</string>
    <string name="hx_register_button">"Register Me"</string>
    <string name="hx_wrong_email">"This email has not been registered."</string>
    <string name="hx_wrong_password">"Password doesn't match your email."</string>
    <string name="hx_no_email">"Email cannot be empty."</string>
    <string name="hx_no_password">"Password cannot be empty."</string>
    <string name="hx_forget_password">"Forget Password"</string>
    <string name="hx_login_image_description">"Logo"</string>
    <string name="hx_register">"REGISTER"</string>
    <string name="hx_user_name">"User name"</string>
    <string name="hx_login_hint">"Already registered?"</string>
    <string name="hx_login_button">"Login Me"</string>
    <string name="hx_login_show_password">"Show Password"</string>
    <string name="hx_basic_profile_name">"Full Name"</string>
    <string name="hx_basic_profile_gender">"Gender"</string>
    <string name="hx_basic_profile_location">"Location"</string>
    <string name="hx_basic_profile_default_name">"Ted"</string>
    <string name="hx_basic_profile_choose_photo">"Upload avatar!"</string>
    <string name="hx_basic_profile_get_location">"New York"</string>
    <string name="hx_basic_profile_birthday_text">"Birthday"</string>
    <string name="hx_basic_profile_birthday_example">"01/01/16"</string>
    <string name="hx_basic_profile_male">"Male"</string>
    <string name="hx_basic_profile_female">"Female"</string>
    <string name="hx_basic_profile_nationality">"Nationality"</string>
    <string name="hx_basic_profile_native_language">"Add your native languages"</string>
    <string name="hx_basic_profile_learn_language">"Languages you want to learn"</string>
    <string name="hx_basic_profile_language_level">"Current proficiency"</string>
    <string name="hx_basic_profile_submit_button">"SUBMIT"</string>
    <string name="hx_basic_profile_nationality_text">"Nationality"</string>
    <string name="hx_basic_profile_nativelanguage_text">"Native languages"</string>
    <string name="hx_basic_profile_learnlanguage_text">"Languages to learn"</string>
    <string name="hx_email_resend">"Resend email"</string>
    <string name="hx_email_confirm">"I have confirmed my email"</string>
    <string name="hx_email_title">"Email Confirmation"</string>
    <string name="hx_email_description">"Your email: "</string>
    <string name="hx_forget_title">"Reset Password "</string>
    <string name="hx_forget_hint">"example@lingobarter.com"</string>
    <string name="hx_forget_description">"Please input your email:"</string>
    <string name="hx_forget_send">"Send email"</string>
    <string name="hx_forget_login">"Back to login"</string>
    <string name="hx_profile_settings_confirm">"Update"</string>
    <string name="hx_profile_settings_cancel">"Cancel"</string>
    <string name="hx_profile_settings_change_password">"Change Password"</string>
    <string name="hx_search_entrance_description">"Find your friends on Lingobarter!"</string>
    <string name="hx_change_password_title">"Change Password"</string>
    <string name="hx_change_password_old_password_hint">"Old Password"</string>
    <string name="hx_change_password_new_password_hint">"New Password"</string>
    <string name="hx_application_settings_title">"Account Settings"</string>
    <string name="hx_application_settings_strict_match">"Strict language match:"</string>
    <string name="hx_application_settings_same_gender">"Can only be found by user of same gender:"</string>
    <string name="hx_application_settings_age_range">"Can only be found by user of age range:"</string>
    <string name="hx_application_settings_hide_you_from_nearby">"Hide you from nearby searches:"</string>
    <string name="hx_application_settings_hide_you_from_search">"Hide you from all searches:"</string>
    <string name="hx_application_settings_hide_info">"Hide information:"</string>
    <string name="hx_application_settings_need_confirmation">"Adding partners confirmation:"</string>
    <string name="hx_application_settings_hide_info_hint">"None"</string>
    <string name="hx_self_information_title">"Self Introduction"</string>
    <string name="hx_self_information_biography">"Biography"</string>
    <string name="hx_self_information_biography_hint">"More about you"</string>
    <string name="hx_self_information_tagline">"Tag Line"</string>
    <string name="hx_self_information_tagline_hint">"Describe yourself"</string>
    <string name="hx_search_title">"Search User"</string>
    <string name="hx_search_age_title">"Age range:"</string>
    <string name="hx_search_gender_title">"Gender:"</string>
    <string name="hx_search_nationality">"Nationalities:"</string>
    <string name="hx_search_teach_language">"Teaching languages:"</string>
    <string name="hx_search_learn_language">"Learning languages:"</string>
    <string name="hx_search_nationality_hint">"Choose nationalities of target users"</string>
    <string name="hx_search_teach_language_hint">"Choose teaching languages"</string>
    <string name="hx_search_learn_language_hint">"Choose learn languages of target users"</string>
    <string name="hx_search_feeling_lucky">"I'm feeling lucky!"</string>
    <string name="hx_search_random_search">"Random Search"</string>
    <string name="hx_search_specific_search">"Specific Search"</string>
    <string name="hx_user_profile_name_title">"Name"</string>
    <string name="hx_user_profile_login_title">"Last login at: "</string>
    <string name="hx_user_profile_teach_language_title">"I can speak: "</string>
    <string name="hx_user_profile_learn_language_title">"I want to learn: "</string>
    <string name="hx_user_profile_biography_title">"More about me: "</string>
    <string name="hx_user_profile_send_request">"ADD (S)HE AS PARTNER!"</string>
    <string name="hx_user_profile_back">"Back to list"</string>
    <string name="hx_user_profile_test">"123"</string>
    <string name="hx_user_profile_long_test">"123123123"</string>
    <string name="hx_user_email_confirmation_hint">"Has not been not activated."</string>


    <!-- STT credentials --> 
    <string name="STT_Username">0e62a22d-2a54-4731-841d-9e3f91e5b661</string>
     
    <string name="STT_Password">tKwa0qCYyBPx</string>
     <string name="STT_TokenFactory">https://stream.watsonplatform.net/speech-to-text/api</string> 

    <!-- TTS credentials --> 
    <string name="TTS_Username">335715c1-4d50-48f9-aa18-9fb94263a375</string> 
    <string name="TTS_Password">pfotm1PcKXjm</string> 
    <string name="TTS_TokenFactory">https://stream.watsonplatform.net/text-to-speech/api</string> 

    <!-- default model/voice -->
    <string name="modelDefault">en-US_BroadbandModel</string>
    <string name="voiceDefault">en-US_MichaelVoice</string>

    <string-array name="language_array">
        <item>"Chinese"</item>
        <item>"English"</item>
        <item>"Spanish"</item>
        <item>"Italian"</item>
        <item>"French"</item>
        <item>"Korean"</item>
        <item>"Russian"</item>
        <item>"German"</item>
    </string-array>

    <string-array name="nationality_array">
        <item>"China"</item>
        <item>"United States"</item>
    </string-array>

    <string-array name="settings_array">
        <item>""</item>
        <item>"Basic Information"</item>
        <item>"Self Introduction"</item>
        <item>"Application Settings"</item>
    </string-array>

    <string-array name="info_array">
        <item>"Name"</item>
        <item>"Email"</item>
        <item>"User name"</item>
        <item>"Gender"</item>
        <item>"Birthday"</item>
        <item>"Tag line"</item>
        <item>"Biography"</item>
        <item>"Avatar"</item>
        <item>"Location"</item>
        <item>"Nationality"</item>
        <item>"Language to teach"</item>
        <item>"Language to learn"</item>
    </string-array>

    <string-array name="test_user">
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"Chinese"</item>
        <item>"English"</item>
        <item>"Spanish"</item>
        <item>"Italian"</item>
        <item>"French"</item>
        <item>"Korean"</item>
        <item>"Russian"</item>
        <item>"German"</item>
    </string-array>

    <string name="text_ack_msg">read</string>
    <string name="text_delivered_msg">delivered</string>

    <string name="error_connect">Failed to connect</string>
    <string name="title_activity_maps">Map</string>
</resources>