<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.st.leighton.lingobarterclient.ProfileSettings"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/hx_profile_settings_name_layout"
        android:orientation="horizontal"

        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/hx_profile_settings_basic_information_layout"
            android:orientation="vertical"
            android:layout_weight="6"

            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hx_profile_settings_text_name"
                android:text="@string/hx_basic_profile_name"
                android:textColor="@color/PaleTurquoise"
                android:gravity="start"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/hx_profile_settings_edit_name"
                android:hint="@string/hx_basic_profile_default_name"
                android:inputType="text"
                android:background="@color/DimGray"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/hx_profile_settings_text_gender"
                android:text="@string/hx_basic_profile_gender"
                android:textColor="@color/PaleTurquoise"
                android:gravity="start"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:id="@+id/hx_basic_radio_group_gender"
                android:orientation="horizontal"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/hx_profile_settings_gender_male"
                    android:text="@string/hx_basic_profile_male"
                    android:checked="true"

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <RadioButton
                    android:id="@+id/hx_profile_settings_gender_female"
                    android:text="@string/hx_basic_profile_female"

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/hx_profile_settings_text_birthday"
                android:text="@string/hx_basic_profile_birthday_text"
                android:textColor="@color/PaleTurquoise"
                android:gravity="start"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/hx_profile_settings_edit_birthday"
                android:focusable="false"
                android:hint="@string/hx_basic_profile_birthday_example"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/hx_profile_settings_avatar_layout"
            android:orientation="vertical"
            android:layout_weight="3"

            android:layout_width="0dp"
            android:layout_height="match_parent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <ImageView
                android:id="@+id/hx_profile_settings_image_avatar"
                android:scaleType="fitXY"
                android:background="@color/main_gray"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center"

                android:layout_width="100dp"
                android:layout_height="100dp" />

            <Button
                android:id="@+id/hx_profile_settings_button_avatar"
                android:text="@string/hx_basic_profile_choose_photo"
                android:layout_gravity="center"
                android:background="@drawable/hx_background_color_change_login_btn"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/hx_profile_settings_text_nationality_title"
        android:text="@string/hx_basic_profile_nationality_text"
        android:textColor="@color/PaleTurquoise"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/hx_profile_settings_spinner_nationality"

        android:layout_width="match_parent"
        android:layout_height="30dp">
    </Spinner>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/hx_profile_settings_text_location_title"
        android:text="@string/hx_basic_profile_location"
        android:textColor="@color/PaleTurquoise"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/hx_profile_settings_edit_location"
        android:textSize="15sp"
        android:hint="@string/hx_basic_profile_get_location"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/hx_profile_settings_text_nativelanguages_title"
        android:text="@string/hx_basic_profile_nativelanguage_text"
        android:textColor="@color/PaleTurquoise"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/hx_profile_settings_edit_native_languages"
        android:focusable="false"
        android:textSize="15sp"
        android:hint="@string/hx_basic_profile_native_language"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/hx_profile_settings_text_learnlanguages_title"
        android:text="@string/hx_basic_profile_learnlanguage_text"
        android:textColor="@color/PaleTurquoise"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/hx_profile_settings_edit_learn_languages"
        android:focusable="false"
        android:textSize="15sp"
        android:hint="@string/hx_basic_profile_learn_language"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/hx_profile_settings_button_submit"
            android:text="@string/hx_profile_settings_confirm"
            android:background="@drawable/hx_background_color_change_login_btn"

            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/hx_profile_settings_button_cancel"
            android:text="@string/hx_profile_settings_cancel"
            android:background="@drawable/hx_background_color_change_login_btn"

            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    
    <Button
        android:id="@+id/hx_profile_settings_button_changepassword"
        android:text="@string/hx_profile_settings_change_password"
        android:background="@android:color/transparent"
        android:textColor="@drawable/hx_text_color_change_register_btn"
        android:gravity="end"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
