<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.st.leighton.lingobarterclient.SelfInformation">

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <TextView
        android:text="@string/hx_self_information_title"
        android:textSize="25sp"
        android:textColor="@color/PaleTurquoise"
        android:gravity="center"

        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <TextView
        android:text="@string/hx_self_information_tagline"
        android:textSize="15sp"
        android:gravity="start"

        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Space
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <EditText
        android:id="@+id/hx_self_information_edit_tagline"
        android:textSize="15sp"
        android:inputType="text"
        android:background="@color/DimGray"
        android:hint="@string/hx_self_information_tagline_hint"

        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <TextView
        android:text="@string/hx_self_information_biography"
        android:textSize="15sp"
        android:gravity="start"

        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Space
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <EditText
        android:id="@+id/hx_self_information_edit_biography"
        android:textSize="15sp"
        android:inputType="text"
        android:background="@color/DimGray"
        android:hint="@string/hx_self_information_biography_hint"

        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <LinearLayout
        android:orientation="horizontal"

        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:id="@+id/hx_self_information_button_submit"
            android:text="@string/hx_profile_settings_confirm"
            android:background="@drawable/hx_background_color_change_login_btn"

            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/hx_self_information_button_cancel"
            android:text="@string/hx_profile_settings_cancel"
            android:background="@drawable/hx_background_color_change_login_btn"

            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

</LinearLayout>
