<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.st.leighton.lingobarterclient.ChangePassword"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Space
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/hx_change_password_title"
        android:textColor="@color/PaleTurquoise"
        android:text="@string/hx_change_password_title"
        android:textSize="25sp"
        android:gravity="center"

        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <EditText
        android:id="@+id/hx_change_password_edit_oldpassword"
        android:hint="@string/hx_change_password_old_password_hint"
        android:inputType="textPassword"

        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <EditText
        android:id="@+id/hx_change_password_edit_newpassword"
        android:hint="@string/hx_change_password_new_password_hint"
        android:inputType="textPassword"

        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Space
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Button
        android:id="@+id/hx_change_password_button_showpassword"
        android:text="@string/hx_login_show_password"
        android:background="@android:color/transparent"
        android:textColor="@drawable/hx_text_color_change_register_btn"
        android:gravity="end"

        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Space
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Button
        android:id="@+id/hx_change_password_button_submit"
        android:text="@string/hx_profile_settings_confirm"
        android:background="@drawable/hx_background_color_change_login_btn"

        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Button
        android:id="@+id/hx_change_password_button_cancel"
        android:text="@string/hx_profile_settings_cancel"
        android:background="@android:color/transparent"
        android:textColor="@drawable/hx_text_color_change_register_btn"
        android:gravity="end"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

</LinearLayout>
